[package]
name = "demo"
version = "0.0.1"
authors = ["doylecnn"]
links = "CQP"
build = "build.rs"

[dependencies.cqpsdk]
git = "https://github.com/evshiron/cqpsdk-rust"

[dependencies]
encoding = "*"
libc = "*"
lazy_static="*"
serde = "*"
serde_json = "*"

[lib]
name = "demo"
crate-type = [ "dylib" ]